# crosvm

./: .gitignore  Cargo.toml
devices/: Cargo.toml
devices/src/: bus.rs  lib.rs  proxy.rs
devices/src/pci/: ac97.rs  mod.rs  pci_configuration.rs  pci_device.rs  pci_root.rs  pci_types.rs  xhci_pci.rs
devices/src/usb/: async_job_queue.rs  auto_callback.rs  error.rs  event_loop.rs  mod.rs
devices/src/usb/backend/: endpoint.rs  host_device.rs  transfer.rs  usb_backend.rs
devices/src/usb/backend/libusb/: config_descriptor.rs  device.rs  device_descriptor.rs  device_handle.rs  error.rs  libusb_context.rs  libusb_device.rs  libusb_pollfd.rs  libusb_transfer.rs  mod.rs  types.rs
devices/src/usb/host_backend/: context.rs  host_backend.rs  host_backend_device_provider.rs  host_device.rs  mod.rs  usb_endpoint.rs  utils.rs
devices/src/usb/xhci/: command_ring_controller.rs  device_slot.rs  event_ring.rs  interrupter.rs  intr_resample_handler.rs  io_thread.rs  mmio_register.rs  mmio_space.rs  mod.rs  ring_buffer.rs  ring_buffer_consumer.rs  ring_buffer_controller.rs  scatter_gather_buffer.rs  todos  transfer_ring.rs  transfer_ring_controller.rs  usb_hub.rs  usb_ports.rs  xhci.rs  xhci_abi.rs  xhci_abi_schema.rs  xhci_backend.rs  xhci_backend_device.rs  xhci_backend_device_provider.rs  xhci_controller.rs  xhci_pci.rs  xhci_regs.rs  xhci_transfer.rs
devices/src/usb/xhci/abi/: o  types.h
devices/src/virtio/: block.rs  mmio.rs  wl.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: fuzz_block.rs  fuzz_zimage.rs
fuzz/src/: fuzz_kernel_loader.rs  fuzz_serial.rs
src/: linux.rs  (+1 more)
(+47 files in other folders)
