[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[features]
wl-dmabuf = []

[dependencies]
byteorder = "*"
data_model = { path = "../data_model" }
bit_field = { path = "../bit_field" }
libc = "*"
io_jail = { path = "../io_jail" }
net_sys = { path = "../net_sys" }
net_util = { path = "../net_util" }
sys_util = { path = "../sys_util" }
vhost = { path = "../vhost" }
virtio_sys = { path = "../virtio_sys" }
vm_control = { path = "../vm_control" }
