[package]
name = "fuzz"
version = "0.1.0"
authors = ["Dylan Reid <dgreid@chromium.org>"]

[dependencies]
kernel_loader = { path = "../kernel_loader" }
libc = "=0.2.32"
sys_util = { path = "../sys_util" }

[lib]
name = "fuzz_kernel_loader"
path = "src/fuzz_kernel_loader.rs"
crate-type = ["staticlib"]
